feat: add login and register
