# docs/swagger.json
@@ -92,6 +92,21 @@
                     "type": "string"
                 }
             }
+        },
+        "model.UserRegister": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
         }
     },
     "securityDefinitions": {
